<resources>
    <string name="app_name">ParseStore</string>

    <string name="title_activity_splash">Splash</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="item_name">Item Name</string>
    <string name="order">Order</string>
    <string name="price_label">Price Label</string>
    <string name="size">Size</string>
    <string-array name="sizes">
        <item>Select Size</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>

    <string name="title_activity_shipping_view">ShippingView</string>
    <string name="us_address_only">US mailing address only</string>
    <string name="postalCode">Postal Code</string>
    <string name="city_state">City, State</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="checkout">Checkout</string>

    <string name="title_activity_checkout">Checkout</string>
    <string name="card_info_prompt">Enter your credit card information</string>
    <string name="cardNumber">Card Number</string>
    <string name="save">Save</string>
    <string name="cvc">CVC</string>
    <string name="credit_card">1234 5678 9012 3456</string>
    <string name="date_hint">MM/DD</string>
    <string name="zip_code">ZIP</string>
    <string name="ok">OK</string>
    <string name="buy">Buy</string>

    <string name="endingIn">Card ending in </string>
    <string name="authorizing">Authorizing</string>
    <string name="charging">Charging</string>
    <string name="validationErrors">Card Error</string>
    <string name="invalidEmail">Invalid Email</string>

</resources>
