<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.parse.parsestore.Activities.ShippingActivity">

    <LinearLayout
        android:paddingTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="left"
        android:background="@android:color/white"
        android:backgroundTint="@color/primary_light"
        android:backgroundTintMode="src_in"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.parse.ParseImageView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:id="@+id/productImage"
                android:src="@drawable/tshirt"
                android:layout_gravity="left" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:id="@+id/priceLabel"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:text="@string/price_label"
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textStyle="bold"
                android:paddingRight="15dp"
                android:layout_weight="0.22" />

            <TextView
                android:textSize="20sp"
                android:text="@string/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/productName"
                android:layout_gravity="left"
                android:gravity="left"
                android:paddingBottom="5dp"/>

            <TextView
                android:textSize="20sp"
                android:text="@string/size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/size"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_below="@+id/linearLayout"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:ems="10"
                android:id="@+id/personName"
                android:layout_marginTop="64dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:ems="10"
                android:id="@+id/personEmail" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:hint="@string/address"
                android:ems="10"
                android:id="@+id/personAddress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:hint="@string/city_state"
                android:ems="10"
                android:id="@+id/cityState" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:hint="@string/postalCode"
                android:ems="10"
                android:id="@+id/zipcode"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/us_address_only"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:id="@+id/orderButton"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:text="@string/checkout"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:background="@drawable/custom_button"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/footer"
                android:clickable="true"
                android:src="@drawable/powered"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
